emp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: emp-deployment
  labels:
    app: emp-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: emp-app
  template:
    metadata:
      labels:
        app: emp-app
    spec:
      containers:
      - name: emp-app
        image: narissatsuboi/ms1:latest
        ports:
          - containerPort: 5000
