ms1-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms1-deployment
  namespace: ms1
  labels:
    app: ms1-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ms1-app
  template:
    metadata:
      labels:
        app: ms1-app
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/arch
                operator: In
                values:
                - amd64
                - arm64
      containers:
      - name: ms1-app
        image: 816818169606.dkr.ecr.us-east-1.amazonaws.com/ms1:latest
        ports:
        - name: http
          containerPort: 8080
        imagePullPolicy: IfNotPresent
      nodeSelector:
        eks.amazonaws.com/nodegroup: service1-ng
