dept-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: deptsvc
spec:
  type: NodePort
  selector:
    app: dept-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
