ms1-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ms-1-service
spec:
  selector:
    app: ms1-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
