ps-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: psingress
  namespace: default
  labels:
    app: psingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
spec:
  ingressClassName: alb
  rules:
    - host: "*.amazonaws.com"
      http:
        paths:
          - pathType: Prefix
            path: /employees
            backend:
              service:
                name: empsvc
                port:
                  number: 80
          - pathType: Prefix
            path: /departments
            backend:
              service:
                name: deptsvc
                port:
                  number: 80
